cert-manager/04-netpol.yaml
# Deploy acme netpol to traefik namespace
# Update the namespaceselector to traefik namespace @ Line 21
# Make sure of the traefik pod label @ line 25

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-acme-http01-solver
  namespace: ingress-dev
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  ingress:
  - ports:
    - port: 8089
      protocol: TCP
  - from:
    - namespaceSelector:
        matchExpressions:
          - key: name
            operator: In
            values: ["ingerss-dev"]
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefikv2
